--- a/mk03_rmarkdown-DT-tables.html
+++ b/mk03_rmarkdown-DT-tables.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Lessons and Exercises</title>
+<title>Displaying Tables With reactable (under construction)</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -20,11 +20,15 @@
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<link href="site_libs/pagedtable-1.1/css/pagedtable.css" rel="stylesheet" />
+<script src="site_libs/pagedtable-1.1/js/pagedtable.js"></script>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -258,7 +262,73 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
+<style type="text/css">
+.code-folding-btn { margin-bottom: 4px; }
+</style>
 
+
+
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+@media print {
+.toc-content {
+  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
+  float: right;
+}
+}
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.90em;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+
+</style>
 
 
 
@@ -268,6 +338,16 @@ $(document).ready(function () {
 
 
 <div class="container-fluid main-container">
+
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row-fluid">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -305,60 +385,40 @@ $(document).ready(function () {
 
 <div class="fluid-row" id="header">
 
-
-
-<h1 class="title toc-ignore">Lessons and Exercises</h1>
-
-</div>
-
-
-<div id="introduction-to-r-rstudio" class="section level3">
-<h3>Introduction to R &amp; RStudio</h3>
-<ul>
-<li><a href="bk00_functions-and-objects.html">Introduction to R Programming</a> <em>an introduction to functions and objects</em></li>
-<li><a href="bk01_workflow-best-practices.html">R Workflow Best Practices</a> <em>tips for managing your code, data, and files</em></li>
-<li><a href="bk02_subsetting-flow-control.html">Subsetting and Flow Control Statements (under construction)</a> <em>change the flow of your code</em></li>
+<div class="btn-group pull-right">
+<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<ul class="dropdown-menu" style="min-width: 50px;">
+<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
+<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
 </ul>
 </div>
-<div id="reproducible-analysis-with-r-markdown" class="section level3">
-<h3>Reproducible Analysis With R Markdown</h3>
-<ul>
-<li><a href="mk00_rmarkdown-exercises.html">Getting Started With R Markdown</a> <em>building reproducible reports</em></li>
-<li><a href="mk01_rmarkdown-reactable-tables.html">Displaying Tables With reactable (under construction)</a> <em>interactive tables in reproducible reports</em></li>
-<li><a href="mk02_rmarkdown-gt-tables.html">Displaying Tables With gt (under construction)</a> <em>interactive tables in reproducible reports</em></li>
-<li><a href="mk03_rmarkdown-DT-tables.html">Displaying Tables With reactable (under construction)</a> <em>interactive tables in reproducible reports</em></li>
-</ul>
+
+
+
+<h1 class="title toc-ignore">Displaying Tables With reactable (under construction)</h1>
+
 </div>
-<div id="simulate-data" class="section level3">
-<h3>Simulate Data</h3>
-<p><em>Coming soon!</em></p>
+
+
+<div id="objectives" class="section level1" number="1">
+<h1 number="1"><span class="header-section-number">1</span> Objectives</h1>
+<p>This section covers some packages for displaying data in tables in your R Markdown reports.</p>
 </div>
-<div id="data-manipulation-and-transformation" class="section level3">
-<h3>Data Manipulation and Transformation</h3>
-<ul>
-<li><a href="dt00_data-manipulations.html">Introduction to Data Manipulation</a> <em>introduction to wrangling data</em></li>
-<li><a href="dt01_data-trans-joins-exercises.html">Reshaping and Joining Data in R</a> <em>transpose, pivot, split, and combine data</em></li>
-<li><a href="dt02_adv-data-manip-joins.html">Advanced Data Transformation and Manipulation</a> <em>dealing with complex data structures</em></li>
-<li><a href="dt03_scrape-wikipedia-data.html">Scraping Wikipedia Tables</a> <em>advanced wrangling example</em></li>
-</ul>
+<div id="resources" class="section level1" number="2">
+<h1 number="2"><span class="header-section-number">2</span> Resources</h1>
+<p>Slides: this is an extra lesson, so there aren’t currently slides available (yet!)</p>
+<p>RStudio.Cloud: this is an extra lesson, so there isn’t an RStudio.Cloud project (yet!)</p>
 </div>
-<div id="data-visualization" class="section level3">
-<h3>Data Visualization</h3>
-<ul>
-<li><a href="gg00_intro-to-data-viz.html">Introduction to Data Visualization with ggplot2</a> <em>an introduction to the grammar of graphics</em></li>
-<li><a href="gg01_data-viz-as-comm.html">Data Visualization as Communication</a> <em>using graphs to effectively share ideas</em></li>
-<li><a href="gg02_adv-data-viz.html">Advanced Data Visualization</a> <em>extending ggplot2</em></li>
-</ul>
-</div>
-<div id="dashboards-and-shiny" class="section level3">
-<h3>Dashboards and Shiny</h3>
-<p><em>coming soon!</em></p>
-<p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+<div id="packages" class="section level1" number="3">
+<h1 number="3"><span class="header-section-number">3</span> Packages</h1>
+<p>We’ll be covering the <a href="https://rstudio.github.io/DT/"><code>DT</code></a> package for displaying tables in R Markdown.</p>
 </div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
+</div>
+</div>
 
 </div>
 
@@ -390,7 +450,38 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
+<script>
+$(document).ready(function () {
+  window.initializeCodeFolding("hide" === "show");
+});
+</script>
 
+<script>
+$(document).ready(function ()  {
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3,h4,h5",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = true;
+    options.smoothScroll = true;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
