--- a/slides.html
+++ b/slides.html
@@ -13,7 +13,7 @@
 
 <title>Slides</title>
 
-<script src="site_libs/header-attrs-2.5.3/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -324,10 +324,11 @@ $(document).ready(function () {
 <li><p><a href="https://mjfrigaard.github.io/intro-to-shiny/Index.html#1">Introduction to Shiny Apps</a></p></li>
 </ol>
 </div>
-<div id="roadmap" class="section level3">
-<h3>Roadmap</h3>
-<p>Below is a roadmap for the lessons and materials:</p>
-<p><img src="https://raw.githubusercontent.com/mjfrigaard/r-meetup-tutorials/837785fb1ab806d047bab2fa9c799966e7f9e75a/img/r-trainings-roadmap.svg" /><!-- --></p>
+<div id="roadmap-rstudio.cloud-projects" class="section level3">
+<h3>Roadmap &amp; RStudio.Cloud Projects</h3>
+<p>Below is a roadmap for the lessons and materials. Links to RStudio.Cloud project are <a href="https://rstudio.cloud/spaces/111399/join?access_code=UiorYWtm0%2BD7qRrCjJK%2Bxxrmcd246SA1UEBLAfOe">here</a>.</p>
+<p>There is also a pdf download of this file <a href="https://github.com/mjfrigaard/r-meetup-tutorials/blob/gh-pages/img/r-trainings-roadmap.pdf">here</a>.</p>
+<p><img src="img/r-trainings-roadmap.png" width="485" /></p>
 </div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
