--- a/mk02_rmarkdown-gt-tables.html
+++ b/mk02_rmarkdown-gt-tables.html
@@ -411,7 +411,21 @@ div.tocify {
 </div>
 <div id="packages" class="section level1" number="3">
 <h1 number="3"><span class="header-section-number">3</span> Packages</h1>
-<p>We’ll be covering the <a href="https://gt.rstudio.com/"><code>gt</code></a> package for displaying tables in R Markdown:</p>
+<p>We’ll be covering the <a href="https://gt.rstudio.com/"><code>gt</code></a> package for displaying tables in R Markdown.</p>
+</div>
+<div id="gt-package" class="section level1" number="4">
+<h1 number="4"><span class="header-section-number">4</span> <code>gt</code> package</h1>
+<div id="dealing-with-merged-columns" class="section level2 tabset" number="4.1">
+<h2 class="tabset" number="4.1"><span class="header-section-number">4.1</span> Dealing with merged columns</h2>
+<div id="merging-columns" class="section level3" number="4.1.1">
+<h3 number="4.1.1"><span class="header-section-number">4.1.1</span> merging columns</h3>
+<p>Merge columns using…</p>
+</div>
+<div id="column-headers" class="section level3" number="4.1.2">
+<h3 number="4.1.2"><span class="header-section-number">4.1.2</span> column headers</h3>
+<p>Add column headers using…</p>
+</div>
+</div>
 </div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
