--- a/mk03_rmarkdown-DT-tables.html
+++ b/mk03_rmarkdown-DT-tables.html
@@ -413,6 +413,14 @@ div.tocify {
 <h1 number="3"><span class="header-section-number">3</span> Packages</h1>
 <p>We’ll be covering the <a href="https://rstudio.github.io/DT/"><code>DT</code></a> package for displaying tables in R Markdown.</p>
 </div>
+<div id="dt-package" class="section level1" number="4">
+<h1 number="4"><span class="header-section-number">4</span> <code>DT</code> package</h1>
+<p>The <code>DT</code> package…</p>
+<div id="filering-data" class="section level2 tabset" number="4.1">
+<h2 class="tabset" number="4.1"><span class="header-section-number">4.1</span> Filering data</h2>
+<p>To allow users to filter the data in your table, use the…</p>
+</div>
+</div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
