--- a/index.html
+++ b/index.html
@@ -317,14 +317,14 @@ $(document).ready(function () {
 <ul>
 <li><a href="bk00_functions-and-objects.html">Introduction to R Programming</a> <em>an introduction to functions and objects</em></li>
 <li><a href="bk01_workflow-best-practices.html">R Workflow Best Practices</a> <em>tips for managing your code, data, and files</em></li>
-<li><a href="bk02_subsetting-flow-control.html">Subsetting and Flow Control Statements (under construction)</a> <em>change the flow of your code</em></li>
+<li><a href="bk02_subsetting-flow-control.html">Subsetting and Flow Control Statements</a> <em>change the flow of your code</em></li>
 </ul>
 </div>
 <div id="reproducible-analysis-with-r-markdown" class="section level3">
 <h3>Reproducible Analysis With R Markdown</h3>
 <ul>
 <li><a href="mk00_rmarkdown-exercises.html">Getting Started With R Markdown</a> <em>building reproducible reports</em></li>
-<li><a href="mk01_rmarkdown-reactable-tables.html">Displaying Tables With reactable (under construction)</a> <em>interactive tables in reproducible reports</em></li>
+<li><a href="mk01_rmarkdown-reactable-tables.html">Displaying Tables With reactable</a> <em>interactive tables in reproducible reports</em></li>
 <li><a href="mk02_rmarkdown-gt-tables.html">Displaying Tables With gt (under construction)</a> <em>interactive tables in reproducible reports</em></li>
 <li><a href="mk03_rmarkdown-DT-tables.html">Displaying Tables With DT (under construction)</a> <em>interactive tables in reproducible reports</em></li>
 <li><a href="mk04_rmarkdown-sparklines.html">Displaying graphs in tables (under construction)</a> <em>add graphs to your tables!</em></li>
