--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ $(document).ready(function () {
 <ul>
 <li><a href="mk00_rmarkdown-exercises.html">Getting Started With R Markdown</a> <em>building reproducible reports</em></li>
 <li><a href="mk01_rmarkdown-reactable-tables.html">Displaying Tables With reactable</a> <em>interactive tables in reproducible reports</em></li>
-<li><a href="mk02_rmarkdown-gt-tables.html">Displaying Tables With gt (under construction)</a> <em>interactive tables in reproducible reports</em></li>
+<li><a href="mk02_rmarkdown-gt-tables.html">Displaying Tables With gt</a> <em>create a wide variety of tables using a cohesive set of table parts</em></li>
 <li><a href="mk03_rmarkdown-DT-tables.html">Displaying Tables With DT (under construction)</a> <em>interactive tables in reproducible reports</em></li>
 <li><a href="mk04_rmarkdown-sparklines.html">Displaying graphs in tables (under construction)</a> <em>add graphs to your tables!</em></li>
 </ul>
