--- a/index.html
+++ b/index.html
@@ -326,13 +326,9 @@ $(document).ready(function () {
 <li><a href="mk00_rmarkdown-exercises.html">Getting Started With R Markdown</a> <em>building reproducible reports</em></li>
 <li><a href="mk01_rmarkdown-reactable-tables.html">Displaying Tables With reactable</a> <em>interactive tables in reproducible reports</em></li>
 <li><a href="mk02_rmarkdown-gt-tables.html">Displaying Tables With gt</a> <em>create a wide variety of tables using a cohesive set of table parts</em></li>
-<li><a href="mk03_rmarkdown-DT-tables.html">Displaying Tables With DT (under construction)</a> <em>interactive tables in reproducible reports</em></li>
+<li><a href="mk03_rmarkdown-DT-tables.html">Displaying Tables With DT (under construction)</a> <em>tables for R Markdown and shiny applications</em></li>
 <li><a href="mk04_rmarkdown-sparklines.html">Displaying graphs in tables (under construction)</a> <em>add graphs to your tables!</em></li>
 </ul>
-</div>
-<div id="simulate-data" class="section level3">
-<h3>Simulate Data</h3>
-<p><em>Coming soon!</em></p>
 </div>
 <div id="data-manipulation-and-transformation" class="section level3">
 <h3>Data Manipulation and Transformation</h3>
@@ -342,6 +338,10 @@ $(document).ready(function () {
 <li><a href="dt02_adv-data-manip-joins.html">Advanced Data Transformation and Manipulation</a> <em>dealing with complex data structures</em></li>
 <li><a href="dt03_scrape-wikipedia-data.html">Scraping Wikipedia Tables</a> <em>advanced wrangling example</em></li>
 </ul>
+</div>
+<div id="simulate-data" class="section level3">
+<h3>Simulate Data</h3>
+<p><em>Coming soon!</em></p>
 </div>
 <div id="data-visualization" class="section level3">
 <h3>Data Visualization</h3>
